<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ValleTPV</string>
    <string name="title_activity_preferencias_tpv">Preferencias TPV</string>
    <string name="title_activity_mesas">Mesas</string>
    <string name="title_activity_cuenta">Cuenta</string>
    <string name="title_activity_op_mesas">Operaciones con mesas</string>
    <string name="title_activity_arqueo">Arqueo de caja</string>
    <string name="crear">Crear</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_camareros">Camareros</string>
    <string name="simpa">Simpa</string>
    <string name="error_pedido">Error\npedido</string>
    <string name="borrar_editar">Editar modo</string>
    <string name="borrar_salir">Salir de modo borrar</string>
    <string name="editar_motivo">Editar motivo</string>
    <string name="borrar_invitacion">Invitacion</string>
    <string name="op_mesas_camarero">Camarero</string>
    <string name="cuenta_reposo">0.00 €</string>
    <string name="cuenta_label_total">Total:</string>
    <string name="camareros_libre">Camareros libre</string>
    <string name="carmareros_pase">Carmareros pase</string>
    <string name="salir">Salir</string>
    <string name="ok">OK</string>
    <string name="add_camareros">Agregar camarero</string>
    <string name="teclado_mesas">Teclado mesas</string>
    <string name="boton_mensajes">Boton mensajes</string>
    <string name="boton_abrir_caja">Boton abrir caja</string>
    <string name="boton_listado_ticket">Boton listado ticket</string>
    <string name="camarero">Camarero</string>
    <string name="settings">Settings</string>
    <string name="abrir_ncajon">Abrir\nCajon</string>
    <string name="lista_nticket">Lista\nTicket</string>
    <string name="mensaje">Mensaje</string>
    <string name="texto_prueba">Cocacola</string>
    <string name="precio">Precio</string>
    <string name="texto_prueba_can">1</string>
    <string name="varios">Varios</string>
    <string name="texto_prueba_euros">2,00€</string>
    <string name="entrega">Entrega:</string>
    <string name="cantida_a_cobrar">Cantida a cobrar</string>
    <string name="articulos_separados">Articulos separados</string>
    <string name="articulos_pendientes">Articulos pendientes</string>
    <string name="mostrar_tickets">tickets</string>
    <string name="imprimir">Imprimir</string>
    <string name="imprimir_factura">Imprimir factura</string>
    <string name="total">Total:</string>
    <string name="borrar">Borrar</string>
    <string name="descripcion">Descripcion</string>
    <string name="x">X</string>
    <string name="send_mensaje">Enviar mensaje</string>
    <string name="ver">Ver</string>
    <string name="fecha_hora">12/12/12 – 00:22</string>
    <string name="texto_prueba_mesa">Mesa 1</string>
    <string name="cambio">Cambio:</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">1º Apellido</string>
    <string name="importe">Importe</string>
    <string name="descripci_n">Descripción</string>
    <string name="cantidad_de_monedas">Cantidad de monedas</string>
    <string name="moneda">Moneda</string>
    <string name="url_servidor">Url servidor TPV</string>
    <string name="lista_zonas">Lista de donas</string>
    <string name="Lista_mesas">Lista de mesas</string>
    <string name="separar_cuenta">separar cuenta</string>
    <string name="buscar_articulos">Buscar articulos</string>
    <string name="cantidad_1">Cantidad 1</string>
    <string name="lista_camareros" />
    <string name="cobrar">Cobrar</string>
    <string name="numero_1">1</string>
    <string name="numero_2">2</string>
    <string name="nuemro_3">3</string>
    <string name="numero_4">4</string>
    <string name="numero_5">5</string>
    <string name="numero_7">7</string>
    <string name="numero_6">6</string>
    <string name="numero_8">8</string>
    <string name="numero_9">9</string>
    <string name="lista_efectivo">Lista de efectivo</string>
    <string name="agregar_efectivo">Agregar efectivo</string>
    <string name="agregar_gastos">Agregar gastos</string>
    <string name="modificar_cambio">Modificar cambio</string>
    <string name="arqueo_de_caja">Arqueo de caja</string>
    <string name="efectivo">Efectivo</string>
    <string name="texto_euros_cero">0.00€</string>
    <string name="texto_cambio">Cambio:</string>
    <string name="gastos_arqueo">Gastos:</string>
    <string name="direcci_n_de_cashlogy_connector">IP  Cashlogy Connector</string>
    <string name="usar_cashlogy">Usar el cashlogy</string>
    <string name="cobro_por_cashlgoy">Cobro con Cashlogy</string>
    <string name="ingresado_texto">Ingresado:</string>
    <string name="cambio_texto">Cambio:</string>
    <string name="cashlogy_titulo_cobros">Cobro de Mesa</string>
    <string name="lista_monedas_ejemplo">50 €</string>
    <string name="mumero_0">0</string>
    <string name="punto_decimal">.</string>
    <string name="letra_C">C</string>
    <string name="cobro_tarjeta">Cobro con TPVPC</string>
    <string name="cambio_cashlogy">Cambiar monedas</string>
    <string name="fraccionado">Cambio fraccionado?</string>
    <string name="lista_monedas">Informacion de cambio</string>
    <string name="gastos">Gastos</string>
    <string name="conteo_monedas">Conteo monedas</string>
    <string name="usar_tpvpc">Usar Tpvpc</string>
    <string name="ip_del_servidor_tpvpc">IP y puerto de tpvpc</string>
    <string name="cobroscontarjeta">Cobros con tarjeta</string>
    <string name="cobro_info">Cobro aceptado\ncon tarjeta</string>
    <string name="btn_mesa_texto_ejemplo">Mesa</string>
    <string name="impresoras_activas">Impresoras Activas</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="cambiar_fondo_caja">Cambiar fondo caja</string>
    <string name="borrar_articulos">Borrar articulos</string>
    <string name="preferencias_de_conexi_n">Preferencias de Conexión</string>
    <string name="agregar_gasto">Agregar Gasto</string>
    <string name="personal_autorizado">Personal Autorizado</string>
    <string name="elegir_camareros">Elegir Camareros</string>
    <string name="separar_ticket">Separar Ticket</string>
    <string name="modifcar_existencias">Modificar existencias</string>

</resources>
