<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pink"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/borrar_articulos"
        android:textColor="@android:color/black"
        android:textSize="52sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_info_borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="26sp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInv"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/pink"
            android:background="@color/pink"
            android:text="@string/borrar_invitacion" />

        <Button
            android:id="@+id/btnSimpa"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/pink"
            android:background="@color/pink"
            android:text="@string/simpa" />

        <Button
            android:id="@+id/btnError"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:backgroundTint="@color/pink"
            android:background="@color/pink"
            android:text="@string/error_pedido" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"

            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/borrar_editar"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/editar" />

        <ImageButton
            android:id="@+id/btn_salir_monedas"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/borrar_salir"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/salir" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pneEditarMotivo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:padding="5sp">

        <EditText
            android:id="@+id/txtMotivo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".78"
            android:autofillHints="Motivo"
            android:hint="@string/editar_motivo"
            android:inputType="text"
            android:textSize="35sp" />

        <ImageButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/ok"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/check"
            />

    </LinearLayout>

</LinearLayout>