<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/lblCan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/texto_prueba_can"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:text="@string/texto_prueba"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/lblPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="end"
        android:text="@string/texto_prueba_euros"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="end"
        android:text="@string/texto_prueba_euros"
        android:textSize="35sp" />


</LinearLayout>