<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Listado de Tickets"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/bg_pink"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/boton_listado_ticket">

        <LinearLayout
            android:id="@+id/pneListados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|bottom"
        android:padding="5dp">


        <ImageButton
            android:id="@+id/btnListado"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/lista_nticket"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/listaticket" />
        <ImageButton
            android:id="@+id/btnImprimirFactura"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/imprimir_factura"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/factura" />

        <ImageButton
            android:id="@+id/btnImprimir"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/imprimir"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/imprimirticket"
            />

        <ImageButton
            android:id="@+id/btn_salir_monedas"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/salir"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/salir" />

    </LinearLayout>
</LinearLayout>