<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600sp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/varios"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/bg_pink"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/txt_varios_can"
            android:layout_width="50dp"
            android:layout_height="90dp"
            android:hint="@string/texto_prueba_can"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/txt_varios_nombre"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:layout_marginStart="36dp"
            android:autofillHints=""
            android:hint="@string/varios"
            android:inputType="text|textAutoComplete"
            android:textColorHint="#423936" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >

        <EditText
            android:id="@+id/txt_varios_precio"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:hint="@string/precio"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="#302A28"
            />

        <ImageButton
            android:id="@+id/btn_guardar_preferencias"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/ok"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/check"
            />

        <ImageButton
            android:id="@+id/btn_varios_salir"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/borrar_salir"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/salir" />
    </LinearLayout>

</LinearLayout>