<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- EditText para la URL del servidor -->
    <EditText
        android:id="@+id/txtUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_servidor"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Espacio entre los componentes -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUrl"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- CheckBox para usar Cashlogy -->
    <CheckBox
        android:id="@+id/chkUseCashlogy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/usar_cashlogy"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUrl" />

    <!-- Espacio entre los componentes -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@+id/chkUseCashlogy"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- EditText para la dirección de Cashlogy -->
    <EditText
        android:id="@+id/txtCashlogyConnector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direcci_n_de_cashlogy_connector"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@+id/chkUseCashlogy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botones OK y Salir en la parte inferior derecha -->

    <Button
        android:id="@+id/btn_aceptar_preferencias"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/fondo_btn_xml"
        android:text="@string/ok"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_salir"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_salir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/fondo_btn_xml"
        android:contentDescription="@string/salir"
        android:src="@drawable/salir"
        android:padding="16dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
