<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/separar_ticket"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/bg_pink"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTotalCobro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cantida_a_cobrar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btn_guardar_preferencias"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/ok"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/check"
            />

        <ImageButton
            android:id="@+id/btn_salir_monedas"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_btn_xml"
            android:contentDescription="@string/salir"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/salir" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffbbee"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/articulos_pendientes"
                android:textSize="25sp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ListView
                android:id="@+id/lstArticulos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/articulos_separados"

                android:textSize="25sp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ListView
                android:id="@+id/lstCobros"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>